# python-sdk

./: README.md  examples  pyproject.toml
examples/: agent_testing.py  cash_advance.py  example_data.py  help_desk.py  multiple_agents.py  polling_campaign.py  property_insurance.py  restaurant_waitlist.py  scheduling_outbound.py
guava/: __init__.py  agent.py  auth.py  call.py  call_controller.py  campaigns.py  client.py  commands.py  edge_wake.py  events.py  guavadialer_events.py  health.py  listen_inbound.py  logging_utils.py  outbound_campaigns.py  runner.py  telemetry.py  terminal_call.py  threading_utils.py  utils.py  webrtc_helper.py
guava/devaudio/: sounddevice.py
guava/examples/: README.md  __init__.py  cash_advance.py  credit_card_activation.py  example_data.py  help_desk.py  inbound_sip.py  inbound_webrtc.py  mock_appointments.py  polling.py  polling_campaign.py  property_insurance.py  restaurant_waitlist.py  scheduling_inbound.py  scheduling_outbound.py  thai_palace.py
guava/examples/agent/: help_desk.py  polling_campaign.py  property_insurance.py  restaurant_waitlist.py  scheduling_outbound.py
guava/helpers/: README.md  beta.py  chromadb.py  fastapi.py  genai.py  lancedb.py  llm.py  openai.py  pgvector.py  pinecone.py  rag.py  server_rag.py  vertexai.py
guava/helpers/rag/: __init__.py  chromadb.py  chunking.py  document_qa.py  embedding.py  (+6 more)
guava/socket/: client.py
guava/testing/: __init__.py  agentpatcher.py  mocks.py  protocol.py  session.py
guava/tools/: create_webrtc_agent.py
guava/types/: __init__.py  call_info.py  incoming_call_action.py
(+2 files in other folders)
